--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
   <meta name="keywords" content="灰黑控工作室 | 木异阁">
   <meta name="description" content="灰黑控工作室 | 木异阁">
   <link rel="shortcut icon" href="https://asnit.top/sitetoplogo.png">
-  <link rel="stylesheet" href="css/buttons.css">
-  <link rel="stylesheet" id="patternfly-adjusted-css" href="css/app.css"
+  <link rel="stylesheet" href="buttons.css">
+  <link rel="stylesheet" id="patternfly-adjusted-css" href="app.css"
   type="text/css" media="all">
-  <link href="css/font-awesome.min.css" rel="stylesheet">
+  <link href="font-awesome.min.css" rel="stylesheet">
 
-  <script type="text/javascript" src="js/jquery.js"></script>
+  <script type="text/javascript" src="jquery.js"></script>
 
-  <script type="text/javascript" src="js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="bootstrap.min.js"></script>
   <style>#main article {
 	border-bottom: none;
 }
@@ -153,12 +153,12 @@ s.parentNode.insertBefore(hm, s);
     <!-- end .navbar -->
   </header>
   <!--音乐-->
-<link rel="stylesheet" href="css/APlayer.min.css">  
+<link rel="stylesheet" href="APlayer.min.css">  
 <div class="aplayer" data-id="3778678" data-server="netease" data-type="playlist" data-fixed="true" data-autoplay="true"   data-volume="0.6" ></div>
 <script>
 </script>
-<script src="js/APlayer.min.js"></script>
-<script src="js/Meting.min.js"></script>
+<script src="APlayer.min.js"></script>
+<script src="Meting.min.js"></script>
 <!--音乐-->
   <!-- end header -->
   <div class="jumbotron">
@@ -241,7 +241,7 @@ s.parentNode.insertBefore(hm, s);
 </script>
 
 
-<script src="js/hovertreewelcome.js"></script>
+<script src="hovertreewelcome.js"></script>
 <script type="text/javascript">// particlesJS('particles-js',
 //   {
 //     "particles": {
