--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ s.parentNode.insertBefore(hm, s);
     <div class="container">
       <div class="splash">
         <div class="content">
-          <img src="images/logo.png" alt="PatternFly logo" id="qq" class="wow fadeInDown animated"
+          <img src="https://avatars.githubusercontent.com/u/77277056?v=4" alt="PatternFly logo" id="qq" class="wow fadeInDown animated"
           style="visibility: visible; animation-name: fadeInDown;">
           <h1 class="wow fadeIn animated" data-wow-delay="750ms" style="visibility: visible; animation-delay: 750ms; animation-name: fadeIn;">
             灰黑控工作室 | 木异阁
