--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@ body {
 	background-color: #07040e;
 	width: 100vw;
     overflow: hidden;
-/*	background: url(images/20200115204229.jpg) bottom center no-repeat #efeff4 ;
-*/}
+	background: url('https://asnit.top/381583.jpg') bottom center no-repeat #efeff4 ;
+}
 
 #canvas {
 	position: absolute;
