--- a/index.html
+++ b/index.html
@@ -130,10 +130,10 @@ s.parentNode.insertBefore(hm, s);
 
             </li>
 		 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children dropdown">
-              <a href="yinyue/" class="dropdown-toggle" target="_blank">
+              <a href="#" class="dropdown-toggle" target="_blank">
                 文档              </a>            </li>
 	<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children dropdown">
-              <a href="liaotian/" class="dropdown-toggle" target="_blank">
+              <a href="#" class="dropdown-toggle" target="_blank">
                 API              </a>            </li> 
 			 <!-- <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children dropdown">
               <a href="tupian.html" target="_blank">
@@ -184,7 +184,7 @@ s.parentNode.insertBefore(hm, s);
     bottom: 30px;
     box-sizing: border-box;
     left: 0;
-"> 2020-2030 aiici | 木异阁. All Rights Reserved. <script type="text/javascript"></script></div>
+"> 2020-2030 AIICI | aiici. All Rights Reserved. <script type="text/javascript"></script></div>
         
         </div>
 
