--- a/index.html
+++ b/index.html
@@ -174,10 +174,10 @@ s.parentNode.insertBefore(hm, s);
 
 
 	<a href="https://asnit.top" class="button button-glow button-border button-rounded button-primary" target="_blank"><i class=""></i>官网</a>&nbsp;&nbsp;&nbsp;&nbsp;
-	<a href="https://asnit.top/wechat/wechat.html" class="button button-glow button-border button-rounded button-primary" target="_blank"><i class=""></i>微信公众号</a>&nbsp&nbsp&nbsp&nbsp
+
 		<a href="https://asnit.top/yl" class="button button-glow button-border button-rounded button-primary" target="_blank"><i class=""></i>娱乐</a>&nbsp&nbsp&nbsp&nbsp 
-	<a href="https://asnit.top/wechat/pwechat.html" class="button button-glow button-border button-rounded button-primary" target="_blank"><i class=""></i>微信小程序</a>&nbsp;&nbsp;&nbsp;&nbsp;
-	<a href="tencent://QQInterLive/?Cmd=2&Uin=1504257947" class="button button-glow button-border button-rounded button-primary" target="_blank"><i class=""></i>联系作者</a><br>
+	<a href="https://asnit.top/wechat/pwechat.html" class="button button-glow button-border button-rounded button-primary" target="_blank"><i class=""></i>小程序</a>&nbsp;&nbsp;&nbsp;&nbsp;
+	<a href="tencent://QQInterLive/?Cmd=2&Uin=1504257947" class="button button-glow button-border button-rounded button-primary" target="_blank"><i class=""></i>找博主</a><br>
           <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 		  <div style="
     width: 100%;
