--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ body {
 	background-color: #07040e;
 	width: 100vw;
     overflow: hidden;
-	background: url('https://asnit.top/381583.jpg') bottom center no-repeat #efeff4 ;
+//background: url('https://asnit.top/381583.jpg') bottom center no-repeat #efeff4 ;
 }
 
 #canvas {
@@ -168,7 +168,7 @@ s.parentNode.insertBefore(hm, s);
           <img src="https://avatars.githubusercontent.com/u/77277056?v=4" alt="PatternFly logo" id="qq" class="wow fadeInDown animated"
           style="visibility: visible; animation-name: fadeInDown;">
           <h1 class="wow fadeIn animated" data-wow-delay="750ms" style="visibility: visible; animation-delay: 750ms; animation-name: fadeIn;">
-            AIICI | aiici
+            AIICI | ❤️❤️❤️
           </h1>
           <p class="description wow fadeIn animated" data-wow-delay="1250ms" style="visibility: visible; animation-delay: 1250ms; animation-name: fadeIn; color:red;"><a href="https://asnit.top/wechat/money.html" target="_blank" style="color:red;">点赞</a></p>
 
