--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ s.parentNode.insertBefore(hm, s);
             </span>
           </button>
           <a class="navbar-brand" id="logo" title="AIICI | aiici" href="" target="_blank">
- AIICI | aiici          </a>        </div>
+ AIICI | ❤️          </a>        </div>
         <!-- end .navbar-header -->
         <div class="navbar-collapse collapse">
           <ul id="menu-primary" class="nav navbar-nav navbar-right">
@@ -168,7 +168,7 @@ s.parentNode.insertBefore(hm, s);
           <img src="https://avatars.githubusercontent.com/u/77277056?v=4" alt="PatternFly logo" id="qq" class="wow fadeInDown animated"
           style="visibility: visible; animation-name: fadeInDown;">
           <h1 class="wow fadeIn animated" data-wow-delay="750ms" style="visibility: visible; animation-delay: 750ms; animation-name: fadeIn;">
-            AIICI | ❤️❤️❤️
+            AIICI | aiici
           </h1>
           <p class="description wow fadeIn animated" data-wow-delay="1250ms" style="visibility: visible; animation-delay: 1250ms; animation-name: fadeIn; color:red;"><a href="https://asnit.top/wechat/money.html" target="_blank" style="color:red;">点赞</a></p>
 
