--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                                     </li>
                                     <script>
                                     function videos() {
-                                        location.replace("https://www.ajeee.com/")
+                                        location.replace("https://v.asnit.top")
                                       }
                                       </script>
                                 </ul>
