--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                                     </li>
                                     <script>
                                         function music() {
-                                            location.replace("https://music.163.com/#/playlist?id=136289366")
+                                            location.replace("https://asnit.top/jd_tb.zip")
                                           }
                                           </script>
                                     <li class="navigation__item">
