--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                                     </script>
                                     <li class="navigation__item">
                                         <a onclick="music()" target="_blank" class="blog-button">
-                                            <div>听音乐</div>
+                                            <div>辅助</div>
                                         </a>
                                     </li>
                                     <script>
