--- a/index.html
+++ b/index.html
@@ -114,27 +114,37 @@
                                             })
                                         }
                                     </script>
-                                    <li class="navigation__item">
-                                        <a onclick="music()" target="_blank" class="blog-button">
-                                            <div>辅助</div>
-                                        </a>
-                                    </li>
-                                    <script>
-                                    <li class="navigation__item">
-                                        <a onclick="videos()" class="blog-button">
-                                            <div>看电影</div>
-                                        </a>
-                                    </li>
-                                    <script>
-                                    function videos() {
+				    <script>
+                                        function need() {
                                             Swal.fire({
                                                 title: "提示",
-                                                text: "站点被封……",
+                                                text: "直接加联系方式",
                                                 confirmButtonText: "好的",
 
                                             })
                                         }
-                                      </script>
+                                    </script>
+                                    <li class="navigation__item">
+                                        <a onclick="need()" target="_blank" class="blog-button">
+                                            <div>业务需求</div>
+                                        </a>
+                                    </li>
+                                    <script>
+                                    // <li class="navigation__item">
+                                    //     <a onclick="videos()" class="blog-button">
+                                    //         <div>看电影</div>
+                                    //     </a>
+                                    // </li>
+                                    // <script>
+                                    // function videos() {
+                                    //         Swal.fire({
+                                    //             title: "提示",
+                                    //             text: "站点被封……",
+                                    //             confirmButtonText: "好的",
+
+                                    //         })
+                                    //     }
+                                    //   </script>
                                 </ul>
                             </nav>
                         </div>
